@@ -19,7 +19,7 @@
     <p>
 The type of an object with special functionality that gives access to
 internals of the Python interpreter and thread structures.  It is used
-as a top level root when traversing the heap to to make sure to find
+as a top level root when traversing the heap to make sure to find
 some special objects that may otherwise be hidden.</p>
     <p>
 There are no references from the RootState object to the special
@@ -116,4 +116,4 @@ but counting in the reversed order of the frame list. Thus the first
 started frame is 0, and in general the most recent frame has a number
 that is the number of frames it has before it in call order.
 </p></dd></dl>
-  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Wed Apr  9 00:20:49 2008</div></body></html>
+  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Wed May 14 11:19:24 2008</div></body></html>
