@@ -381,7 +381,20 @@ rationale and some use cases for Heapy (version 0.1).
      <td><a href='http://guppy-pe.sourceforge.net/heapy-presentation.pdf'> heapy-presentation.pdf</a></td>
      <td> Slides from the presentation.</td></tr>
     <tr>
-     <td id='last' colspan='5'></td></tr></table></p><a name='Download'>
+     <td id='last' colspan='5'></td></tr></table></p>
+  <h3>
+ External resources
+</h3>
+  <p>
+ Thanks to all that have used and commented on Heapy on various
+blogs. I think the following links may be especially useful to get
+started. More tips are very welcome!
+</p>
+  <ul>
+   <li><a href='http://www.pkgcore.org/trac/pkgcore/doc/dev-notes/heapy.rst'>How to use guppy/heapy for tracking down memory usage</a> (pkgcore - Trac)</li>
+   <li><a href='http://blog.redinnovation.com/2008/03/07/debugging-django-memory-leak-with-trackrefs-and-guppy'>Debugging Django memory leak with TrackRefs and Guppy</a>
+ (Redi for Life)
+</li></ul><a name='Download'>
    <h2> Download</h2></a>
   <p>
 
@@ -508,4 +521,4 @@ system:
    <dd><a href='http://sourceforge.net/tracker/?group_id=105577&atid=641821'> http://sourceforge.net/tracker/?group_id=105577&amp;atid=641821</a></dd>
    <dt> The Sourceforge project summary page is:</dt>
    <dd><a href='http://sourceforge.net/projects/guppy-pe'> http://sourceforge.net/projects/guppy-pe</a></dd></dl>
-  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Wed Apr  9 00:20:49 2008</div></body></html>
+  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Wed May 14 11:19:24 2008</div></body></html>
